# comtensor-subnet

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: miners.md  validators.md
src/comtensor/: cli.py
src/comtensor/base/: commit_based_crossval.py  crossval.py  synapse_based_crossval.py
src/comtensor/miner/: model.py
src/comtensor/miner/crossvals/audiogen/: audiogen.py  protocol.py
src/comtensor/miner/crossvals/bitagent/: bitagent.py  task.py
src/comtensor/miner/crossvals/compute/: compute.py  pow.py  protocol.py
src/comtensor/miner/crossvals/cortex/: cortex.py
src/comtensor/miner/crossvals/fractal/: fractal.py
src/comtensor/miner/crossvals/image_alchemy/: alchemy.py  protocol.py
src/comtensor/miner/crossvals/itsai/: itsai.py  protocol.py
src/comtensor/miner/crossvals/llm_defender/: llm_defender.py  protocol.py
src/comtensor/miner/crossvals/myshell/: myshell.py
src/comtensor/miner/crossvals/niche/: niche.py  offline_challenge.py  protocol.py
src/comtensor/miner/crossvals/omegalabs/: omegalabs.py
src/comtensor/miner/crossvals/omron/: omron.py
src/comtensor/miner/crossvals/openkaito/: openkaito.py  protocol.py  tasks.py  utils.py
src/comtensor/miner/crossvals/prompting/: protocol.py  text.py
src/comtensor/miner/crossvals/snporacle/: protocol.py  snporacle.py
src/comtensor/miner/crossvals/sturdy/: protocol.py  sturdy.py
src/comtensor/miner/crossvals/subvortex/: constants.py  localisation.json  localisation.py  protocol.py  score.py  subvortex.py
src/comtensor/validator/: validator.py
(+8 files in other folders)
